name:                digest-auth
version:             0.1.0
synopsis:            digest-auth implemantation.
description:         please read examples<https://github.com/philopon/digest-auth-hs/examples>.
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/digest-auth-hs
Bug-reports:         https://github.com/philopon/digest-auth-hs/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Auth.Digest
  build-depends:       base              >=4.6   && <4.8

                     , transformers      >=0.2   && <0.5
                     , stm               >=2.4   && <2.5
                     , focus             >=0.1   && <0.2
                     , stm-containers    >=0.2   && <0.3

                     , cprng-aes         >=0.6   && <0.7
                     , cryptohash        >=0.11  && <0.12
                     , crypto-random     >=0.0.8 && <0.0.9

                     , attoparsec        >=0.12  && <0.13
                     , base64-bytestring >=1.0   && <1.1
                     , bytestring        >=0.10  && <0.11
                     , bytestring-lexing >=0.4   && <0.5
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
